Fix waltid DeviceResponse bug